# z-kitty-launcher

./: .gitignore  AGENTS.md  Cargo.toml  README.md  kitty-launcher.desktop
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release-debian-signed.yml
debian/: changelog  rules
scripts/: build-deb.sh  build.sh  install-completions.sh
src/: main.rs
